--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "utils/*": ["./utils/*"],
       "types/*": ["./types/*"],
       "constants/*": ["./constants/*"],
-      "styles/*": ["./styles/*"]
+      "styles/*": ["./styles/*"],
+      "hooks/*": ["./hooks/*"]
     }
   },
   "include": ["src"]
