--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
