--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "^18.0.0",
     "classnames": "^2.3.2",
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
