--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "classnames": "^2.3.2",
@@ -11,6 +12,7 @@
     "npmrc": "^1.1.1",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
