--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.3.2",
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
+    "react-auth-code-input": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
