--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '20'
 
       - name: Display Node.js and npm versions
         run: |
@@ -25,6 +25,7 @@ jobs:
 
       - name: Install dependencies and build
         run: |
+          npm install -g npm@latest
           npm ci
           npm run build
 
@@ -39,7 +40,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '20'
 
       - name: Set up .npmrc
         run: |
