--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm install -g npm@latest
           npm ci
-          npm run build
+          CI=false npm run build
 
   publish:
     runs-on: ubuntu-latest
