--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -43,10 +43,8 @@ jobs:
           node-version: '20'
 
       - name: Set up .npmrc
-        run: |
-          echo "//registry.npmjs.org/:_authToken=\${secrets.NPM_AUTH_TOKEN}" >> ~/.npmrc
-          echo "email=\"${secrets.EMAIL}\"" >> ~/.npmrc
-          echo "always-auth=true" >> ~/.npmrc
+        run: echo -e "_auth=${{ secrets.NPM_PUBLISH_KEY }}\nemail=${secrets.EMAIL}\nalways-auth=true" >> ~/.npmrc
+
 
       - name: Get latest version
         run: |
