--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Set up .npmrc & publish 
         run: |
-          echo -e "_auth=${{secrets.NPM_PUBLISH_KEY}}\nemail=${{secrets.EMAIL}}\nalways-auth=true" >> ~/.npmrc
-          npm set "//registry.npmjs.org/:_authToken" ${{ secrets.NPM_PUBLISH_KEY }}
+          echo -e "_auth=${{secrets.NPM_AUTH_TOKEN}}\nemail=${{secrets.EMAIL}}\nalways-auth=true" >> ~/.npmrc
           npm version --no-git-tag-version patch
           npm publish
       
