--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -28,7 +28,9 @@ jobs:
       - name: Set up .npmrc & publish 
         run: |
           echo -e "//registry.npmjs.org/:_auth=${{secrets.NPM_AUTH_TOKEN}}\nemail=${{secrets.EMAIL}}\nalways-auth=true" >> ~/.npmrc
-          npm version --no-git-tag-version patch
+          latest_version=$(npm view <yourProject> version)
+          npm version --no-git-tag-version "$latest_version"
+          npm version --no-git-tag-version prerelease
           npm publish
       
 
