--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -27,8 +27,9 @@ jobs:
 
       - name: Set up .npmrc & publish 
         run: |
-          npm config set registry https://registry.npmjs.org
-          npm publish --access public --scope=@aigotsrl/rc_shared_components_frontend
+          echo -e "//registry.npmjs.org/:_auth=${{secrets.NPM_AUTH_TOKEN}}\nemail=${{secrets.EMAIL}}\nalways-auth=true" >> .npmrc
+          npm version patch --no-git-tag-version
+          npm publish --provenance --access public --scope=@aigotsrl/rc_shared_components_frontend
       
 
         
