--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -8,28 +8,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build & publish
+    permissions:
+      contents: read
+      id-token: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '20'
-
-      - name: Install dependencies and build
-        run: |
-          npm install -g npm@latest
-          npm ci
-          CI=false npm run build
-
-
-      - name: Set up .npmrc & publish 
-        run: |
-          echo -e "//registry.npmjs.org/:_auth=${{secrets.NPM_AUTH_TOKEN}}\nemail=${{secrets.EMAIL}}\nalways-auth=true" >> .npmrc
-          npm version patch --no-git-tag-version
-          npm publish --provenance --access public --scope=@aigotsrl/rc_shared_components_frontend
-      
-
-        
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm install -g npm
+      - run: npm ci
+      - run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
