--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@aigotsrl/rc_shared_components_frontend",
   "version": "0.1.2",
+  "type": "module",
   "dependencies": {
-    "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "classnames": "^2.3.2",
     "libphonenumber-js": "^1.10.42",
     "npmrc": "^1.1.1",
@@ -16,11 +17,12 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "vite": "^5.0.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tsc && eslint src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts src/**/**/**/**/*.ts src/*.tsx src/**/*.tsx src/**/**/*.tsx src/**/**/**/*.tsx src/**/**/**/**/*.tsx --max-warnings=0 --fix",
@@ -53,13 +55,11 @@
     "@storybook/blocks": "7.0.26",
     "@storybook/preset-create-react-app": "7.0.26",
     "@storybook/react": "7.0.26",
-    "@storybook/react-webpack5": "7.0.26",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@types/node": "^20.10.4",
     "@types/sass": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-plugin-named-exports-order": "0.0.2",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -72,9 +72,7 @@
     "prettier": "^2.8.8",
     "prop-types": "15.8.1",
     "storybook": "7.0.26",
-    "ts-loader": "^9.4.4",
-    "webpack": "5.88.1",
-    "webpack-cli": "^5.1.4"
+    "ts-loader": "^9.4.4"
   },
   "description": "In this repo will live the components that will be shared between all the project.\r The suggested structure is:",
   "main": "src/index.tsx",
