--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tsc && eslint src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts src/**/**/**/**/*.ts src/*.tsx src/**/*.tsx src/**/**/*.tsx src/**/**/**/*.tsx src/**/**/**/**/*.tsx --max-warnings=0 --fix",
@@ -52,9 +52,13 @@
     "@storybook/addon-essentials": "7.0.26",
     "@storybook/addon-interactions": "7.0.26",
     "@storybook/addon-links": "7.0.26",
+    "@storybook/addon-onboarding": "^1.0.10",
     "@storybook/blocks": "7.0.26",
+    "@storybook/builder-vite": "^7.6.4",
     "@storybook/preset-create-react-app": "7.0.26",
     "@storybook/react": "7.0.26",
+    "@storybook/react-webpack5": "^7.6.4",
+    "@storybook/test": "^7.6.4",
     "@storybook/testing-library": "0.0.14-next.2",
     "@types/node": "^20.10.4",
     "@types/sass": "^1.45.0",
@@ -72,7 +76,16 @@
     "prettier": "^2.8.8",
     "prop-types": "15.8.1",
     "storybook": "7.0.26",
-    "ts-loader": "^9.4.4"
+    "ts-loader": "^9.4.4",
+    "webpack": "^5.89.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "classnames": "^2.3.2",
+    "libphonenumber-js": "^1.10.42",
+    "react-auth-code-input": "^3.2.1",
+    "react-hook-form": "^7.45.4",
+    "react-toastify": "^9.1.3"
   },
   "description": "In this repo will live the components that will be shared between all the project.\r The suggested structure is:",
   "main": "src/index.tsx",
