--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           repository: "Aigotsrl/RC-Shared-Components-Frontend"
           ref: main
-          token: ${{ steps.secrets.outputs.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
           fetch-depth: 0
       - name: version
@@ -50,7 +50,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ steps.secrets.outputs.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
           repository: "Aigotsrl/RC-Shared-Components-Frontend"
 
