--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -27,9 +27,10 @@ jobs:
         run: |
           CI=false npm run build
           echo -e "//registry.npmjs.org/:_auth=${{secrets.NPM_AUTH_TOKEN}}\nemail=${{secrets.EMAIL}}\nalways-auth=true" >> .npmrc
-          VERSION="$(npm version patch --no-git-tag-version)"
+          VERSION=$(npm version patch --no-git-tag-version)
+          VERSION="${VERSION:1}"
           echo ::set-output name=VERSION::$VERSION
-          PATH=="package.json"
+          PATH="package.json"
           echo ::set-output name=PATH::$PATH
       - name: Checkout
         uses: actions/checkout@v3
