--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -32,6 +32,7 @@ jobs:
           echo ::set-output name=VERSION::$VERSION
           PATH="package.json"
           echo ::set-output name=PATH::$PATH
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -55,7 +56,7 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          branch: develop
           repository: "Aigotsrl/RC-Shared-Components-Frontend"
 
       - run: npm publish --access public
