--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: "Aigotsrl/RC-Shared-Components-Frontend"
-          ref: main
+          ref: develop
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
           fetch-depth: 0
