--- a/package.json
+++ b/package.json
@@ -14,26 +14,21 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
-    "typescript": "^4.4.2",
     "vite": "^5.0.8"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && tsc",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "tsc && eslint src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts src/**/**/**/**/*.ts src/*.tsx src/**/*.tsx src/**/**/*.tsx src/**/**/**/*.tsx src/**/**/**/**/*.tsx --max-warnings=0 --fix",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build": "tsc --p ./tsconfig-build.json && vite build",
+    "prepublishOnly": "npm run build",
+    "preview": "vite preview",
+    "lint": "tsc && eslint src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts src/**/**/**/**/*.ts src/*.tsx src/**/*.tsx src/**/**/*.tsx src/**/**/**/*.tsx src/**/**/**/**/*.tsx --max-warnings=0 --fix"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -49,17 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "7.0.26",
-    "@storybook/addon-interactions": "7.0.26",
-    "@storybook/addon-links": "7.0.26",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/blocks": "7.0.26",
-    "@storybook/builder-vite": "^7.6.4",
-    "@storybook/preset-create-react-app": "7.0.26",
-    "@storybook/react": "7.0.26",
-    "@storybook/react-webpack5": "^7.6.4",
-    "@storybook/test": "^7.6.4",
-    "@storybook/testing-library": "0.0.14-next.2",
     "@types/node": "^20.10.4",
     "@types/sass": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -72,23 +56,29 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-storybook": "^0.6.12",
+    "glob": "^10.3.10",
     "prettier": "^2.8.8",
     "prop-types": "15.8.1",
-    "storybook": "7.0.26",
     "ts-loader": "^9.4.4",
-    "webpack": "^5.89.0"
+    "typescript": "^5.3.3",
+    "vite-plugin-dts": "^3.6.4",
+    "vite-plugin-lib-inject-css": "^1.3.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
     "classnames": "^2.3.2",
     "libphonenumber-js": "^1.10.42",
+    "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
     "react-hook-form": "^7.45.4",
     "react-toastify": "^9.1.3"
   },
   "description": "In this repo will live the components that will be shared between all the project.\r The suggested structure is:",
-  "main": "src/index.tsx",
+  "main": "dist/main.js",
+  "types":"dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
+  "sideEffects": ["**/*.css"],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/AiGotsrl/RC-Shared-Components-Frontend.git"
