--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    // "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
@@ -26,5 +26,5 @@
       "hooks/*": ["./hooks/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "lib"]
 }
