--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npmrc": "^1.1.1",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
@@ -67,21 +68,24 @@
   },
   "peerDependencies": {
     "classnames": "^2.3.2",
-    "react-router-dom": "^6.15.0",
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3"
   },
   "description": "In this repo will live the components that will be shared between all the project.\r The suggested structure is:",
   "main": "dist/main.js",
-  "types":"dist/main.d.ts",
+  "types": "dist/main.d.ts",
   "files": [
     "dist"
   ],
-  "sideEffects": ["**/*.css"],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/AiGotsrl/RC-Shared-Components-Frontend.git"
