--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "classnames": "^2.3.2",
+    "fabric": "^5.3.0",
+    "jotai": "^2.6.5",
     "libphonenumber-js": "^1.10.42",
     "npmrc": "^1.1.1",
     "react": "^18.2.0",
-    "react-datepicker": "^4.18.0",
     "react-auth-code-input": "^3.2.1",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.7",
     "@types/node": "^20.10.4",
     "@types/sass": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -69,21 +72,23 @@
   },
   "peerDependencies": {
     "classnames": "^2.3.2",
-    "react-router-dom": "^6.15.0",
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3"
   },
   "description": "In this repo will live the components that will be shared between all the project.\r The suggested structure is:",
   "main": "dist/main.js",
-  "types":"dist/main.d.ts",
+  "types": "dist/main.d.ts",
   "files": [
     "dist"
   ],
-  "sideEffects": ["**/*.css"],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/AiGotsrl/RC-Shared-Components-Frontend.git"
