--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "zustand": "^4.5.1"
   },
   "scripts": {
     "dev": "vite",
