--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.11",
   "type": "module",
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
     "@types/react": "^18.0.0",
     "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "^18.0.0",
@@ -14,13 +15,14 @@
     "npmrc": "^1.1.1",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
-    "react-datepicker": "^4.18.0",
     "react-colorful": "^5.6.1",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
+    "uuid": "^9.0.1",
     "vite": "^5.0.12"
   },
   "scripts": {
@@ -52,6 +54,7 @@
     "@types/fabric": "^5.3.7",
     "@types/node": "^20.10.4",
     "@types/sass": "^1.45.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.43.0",
@@ -72,12 +75,14 @@
     "vite-plugin-lib-inject-css": "^1.3.0"
   },
   "peerDependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
     "classnames": "^2.3.2",
     "fabric": "^5.3.0",
     "jotai": "^2.6.5",
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
