--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "classnames": "^2.3.2",
     "fabric": "^5.3.0",
+    "fabric-history": "^1.7.0",
     "jotai": "^2.6.5",
     "libphonenumber-js": "^1.10.42",
     "npmrc": "^1.1.1",
@@ -78,6 +79,7 @@
     "@hello-pangea/dnd": "^16.5.0",
     "classnames": "^2.3.2",
     "fabric": "^5.3.0",
+    "fabric-history": "^1.7.0",
     "jotai": "^2.6.5",
     "libphonenumber-js": "^1.10.42",
     "react": "^18.2.0",
@@ -87,7 +89,8 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "uuid": "^9.0.1"
   },
   "description": "In this repo will live the components that will be shared between all the project.\r The suggested structure is:",
   "main": "dist/main.js",
