--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@testing-library/react": "^14.2.2",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
     "cspell": "^8.6.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "happy-dom": "^14.3.10",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
@@ -33,7 +36,8 @@
     "build:themes": "yarn workspace @aigot-ui/themes build",
     "build:core": "yarn workspace @aigot-ui/core build",
     "storybook:core": "yarn workspace @aigot-ui/core storybook",
-    "storybook:themes": "yarn workspace @aigot-ui/themes storybook"
+    "storybook:themes": "yarn workspace @aigot-ui/themes storybook",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@s-ui/mono": "^2.45.0"
