--- a/packages/aigot-core/package.json
+++ b/packages/aigot-core/package.json
@@ -49,7 +49,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.8.1",
-    "vite-plugin-lib-inject-css": "^2.0.1"
+    "vite-plugin-lib-inject-css": "^2.0.1",
+    "vitest": "^1.4.0"
   },
   "sideEffects": [
     "**/*.css"
