--- a/packages/aigot-themes/package.json
+++ b/packages/aigot-themes/package.json
@@ -47,7 +47,8 @@
     "storybook": "^8.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-lib-inject-css": "^2.0.1"
+    "vite-plugin-lib-inject-css": "^2.0.1",
+    "vitest": "^1.4.0"
   },
   "sideEffects": [
     "**/*.css"
